fixed white space

--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
-body {
+
+html,body {
     font-family: "Kanit", sans-serif;
-    width: 100%;
     height: 100%;
+    width: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
+    outline: 1px solid red; /* Helps visualize boundaries */
+
 }
 
 *{
   font-family: "Kanit", sans-serif;
+  box-sizing: border-box;
+
 
 }
 
@@ -100,6 +105,7 @@ a {
 
 .page-2{
     background-color: #ED5C01;
+    width: 100%;
 }
 .page-2 img{
   width: auto;
